# geode

./: .gitignore  Cargo.toml
.cargo/: config.toml
crates/cocos2dx/: Cargo.toml
crates/cocos2dx/src/: lib.rs
crates/fmod/: Cargo.toml
crates/fmod/src/: lib.rs
crates/geode/: Cargo.toml
crates/geode/src/: lib.rs
crates/geode/src/loader/: log.rs  mod.rs  setting.rs
crates/geode/src/modify/: as_static_function.rs  mod.rs
crates/geode/src/ui/: general.rs  mod.rs  notification.rs  text_input.rs
crates/geode/src/utils/: json_validation.rs  mini_func.rs  mod.rs  node_ids.rs
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: lib.rs
crates/tulip-hook/: Cargo.toml
crates/tulip-hook/src/: handler.rs  hook.rs  lib.rs  misc.rs  pool.rs  wrapper.rs
crates/tulip-hook/src/assembler/: base_assembler.rs  mod.rs  x86_assembler.rs
loader/include/Geode/utils/: Task.hpp
