[package]
name = "geode"
version = "0.1.0"
edition = "2021"

[dependencies]
libc = { version = "0.2.153", features = ["use_std"] }
proc-macros = { version = "0.1.0", path = "../proc-macros" }
rcocos2d-sys = "0.2.4"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"

[lib]
crate-type = ["cdylib"]
